--- a/MpAgencjaKidoTv/src/main/AndroidManifest.xml
+++ b/MpAgencjaKidoTv/src/main/AndroidManifest.xml
@@ -6,44 +6,48 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <supports-screens
-        android:smallScreens="false"
-        android:normalScreens="true"
         android:largeScreens="true"
-        android:xlargeScreens="true"
-        android:requiresSmallestWidthDp="600"/>
+        android:normalScreens="true"
+        android:requiresSmallestWidthDp="600"
+        android:smallScreens="false"
+        android:xlargeScreens="true"/>
 
     <application
         android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
         <activity
-            android:theme="@style/Theme"
-            android:screenOrientation="landscape"
-            android:name=".main.SplashScene"
+            android:name="mp.agencja.apsik.kidotv.main.SplashScene"
+            android:configChanges="locale|keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
-            android:configChanges="locale|keyboardHidden|orientation|screenSize">
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
-            android:name=".main.MainManuScene"
+            android:name="mp.agencja.apsik.kidotv.main.MainManuScene"
             android:screenOrientation="landscape"
             android:theme="@style/Theme"/>
         <activity
-            android:name=".main.PlayListScene"
+            android:name="mp.agencja.apsik.kidotv.main.PlayListScene"
             android:screenOrientation="landscape"
             android:theme="@style/Theme"/>
         <activity
-            android:name=".main.YouTubePlayerScene"
+            android:name="mp.agencja.apsik.kidotv.main.YouTubePlayerScene"
             android:screenOrientation="landscape"
             android:theme="@style/Theme"/>
-
         <activity
-            android:name=".main.YoutubeOverLayScene"
+            android:name="mp.agencja.apsik.kidotv.main.YoutubeOverLayScene"
             android:screenOrientation="landscape"
             android:theme="@style/ThemeOverLayYoutube"/>
+        <activity
+            android:name="mp.agencja.apsik.kidotv.main.FavoritePlayListScene"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme"/>
     </application>
 
 </manifest>
