--- a/MpAgencjaKidoTv/build.gradle
+++ b/MpAgencjaKidoTv/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.8.+'
+        classpath 'com.android.tools.build:gradle:0.9.+'
     }
 }
 apply plugin: 'android'
@@ -26,8 +26,8 @@ android {
 }
 
 dependencies {
-    //compile 'com.google.android.gms:play-services:4.0.30'
+    compile 'com.google.android.gms:play-services:4.0.30'
     compile 'com.android.support:support-v4:19.0.0'
-    //    compile project(':libs:facebook')
+    compile project(':libs:FacebookSDK_3.7')
     compile files('youtube_lib/YouTubeAndroidPlayerApi.jar')
 }
