--- a/MpAgencjaKidoTv/src/main/AndroidManifest.xml
+++ b/MpAgencjaKidoTv/src/main/AndroidManifest.xml
@@ -33,7 +33,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:launchMode="singleInstance"
+            android:name="mp.agencja.apsik.kidotv.main.SplashKido"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme"/>
+        <activity
             android:name="mp.agencja.apsik.kidotv.main.MainManuScene"
             android:screenOrientation="landscape"
             android:theme="@style/Theme"/>
@@ -53,6 +56,14 @@
             android:name="mp.agencja.apsik.kidotv.main.FavoritePlayListScene"
             android:screenOrientation="landscape"
             android:theme="@style/Theme"/>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/app_id"/>
+
     </application>
 
 </manifest>
