--- a/MpAgencjaKidoTv/src/main/AndroidManifest.xml
+++ b/MpAgencjaKidoTv/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="com.android.vending.BILLING"/>
+    <uses-permission android:name="android.permission.GET_TASKS"/>
 
     <supports-screens
         android:largeScreens="true"
@@ -16,6 +18,7 @@
         android:xlargeScreens="true"/>
 
     <application
+        android:debuggable="false"
         android:largeHeap="true"
         android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
@@ -38,6 +41,7 @@
             android:theme="@style/Theme"/>
         <activity
             android:name="mp.agencja.apsik.kidotv.main.MainManuScene"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="landscape"
             android:theme="@style/Theme"/>
         <activity
@@ -56,6 +60,9 @@
             android:name="mp.agencja.apsik.kidotv.main.FavoritePlayListScene"
             android:screenOrientation="landscape"
             android:theme="@style/Theme"/>
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"/>
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -64,6 +71,9 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id"/>
 
+        <service
+            android:name=".main.MusicService"
+            android:enabled="true"/>
     </application>
 
 </manifest>
